infrastructure/base/traefik/traefik.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-system
  labels:
    networking.tinyrack.net/isolation: enabled
